# n7m-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
.github/workflows/: docker-publish.yml  test.yml
src/n7m/: __init__.py  _version.py  client.py  instructions.md  models.py  server.py  settings.py
tests/: test_basic.py
