[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "n7m-mcp"
version = "0.1.0"
description = "N7M: MCP server for Nominatim geocoding and reverse geocoding services"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Jonathan Springer", email = "jps@s390x.com"},
]
maintainers = [
    {name = "Jonathan Springer", email = "jps@s390x.com"},
]
keywords = [
    "nominatim",
    "geocoding",
    "mcp",
    "model-context-protocol",
    "openstreetmap",
    "fastmcp",
    "reverse-geocoding",
    "location",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.10.1",
    "fastmcp>=2.12.4",
    "smithery>=0.4.2",
]

[project.urls]
Homepage = "https://github.com/jonpspri/n7m-mcp"
Documentation = "https://github.com/jonpspri/n7m-mcp#readme"
Repository = "https://github.com/jonpspri/n7m-mcp"
Issues = "https://github.com/jonpspri/n7m-mcp/issues"

[project.scripts]
n7m-mcp = "n7m.server:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "*.pyc",
    "__pycache__",
    ".git",
    ".github",
    ".venv",
    ".env",
    ".DS_Store",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "htmlcov",
    ".coverage",
]

[tool.hatch.build.targets.wheel]
packages = ["src/n7m"]

[tool.ruff]
line-length = 100
fix = true
output-format = "grouped"
show-fixes = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by ruff format)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
mypy_path = "./src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "fastmcp",
    "smithery",
]
ignore_missing_imports = true

[tool.smithery]
server = "n7m.server:create_server"

[dependency-groups]
dev = [
    "ruff>=0.12.10",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
]
